libdrivers_includedir = $(includedir)
nobase_libdrivers_include_HEADERS = pipe_mgr/pipe_mgr_intf.h
nobase_libdrivers_include_HEADERS += pipe_mgr/pipe_mgr_err.h
nobase_libdrivers_include_HEADERS += pipe_mgr/core/pipe_mgr_init.h
nobase_libdrivers_include_HEADERS += pipe_mgr/shared/pipe_mgr_infra.h
nobase_libdrivers_include_HEADERS += pipe_mgr/shared/pipe_mgr_mat.h
nobase_libdrivers_include_HEADERS += bf_types/bf_types.h
nobase_libdrivers_include_HEADERS += dvm/bf_drv_intf.h dvm/bf_drv_profile.h dvm/dvm_intf.h
nobase_libdrivers_include_HEADERS += lld/lld_err.h lld/bf_dev_if.h lld/bf_lld_if.h lld/python_shell_mutex.h
nobase_libdrivers_include_HEADERS += port_mgr/bf_port_if.h port_mgr/port_mgr_intf.h port_mgr/dpdk/bf_dpdk_port_if.h
nobase_libdrivers_include_HEADERS += ctx_json/ctx_json_utils.h
nobase_libdrivers_include_HEADERS += bf_pal/bf_pal_port_intf.h
nobase_libdrivers_include_HEADERS += bf_pal/dev_intf.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt.hpp
nobase_libdrivers_include_HEADERS += tdi_rt/tdi_rt_defs.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_common.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table.hpp
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_info.hpp
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_info.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_session.hpp
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_session.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_data.hpp
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_data.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_key.hpp
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_key.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_init.hpp
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_init.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_attributes.hpp
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_attributes.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_operations.h
nobase_libdrivers_include_HEADERS += bf_rt/bf_rt_table_operations.hpp
nobase_libdrivers_include_HEADERS += bf_rt/proto/bf_rt_server.h
nobase_libdrivers_include_HEADERS += osdep/p4_sde_osdep.h
nobase_libdrivers_include_HEADERS += osdep/p4_sde_osdep_utils.h
